@@ -2,3 +2,4 @@
 **/out
 config.json
 supbot.db
+*/null/*
