@@ -26,7 +26,12 @@ public class Utils {
 
     }
     public static String chatGroupNameToUID(String name){
-        return name.split(Strings.titlePrefix)[1];
+        String[] nameParts = name.split(Strings.titlePrefix);
+
+        if(nameParts.length >= 2)
+            return  nameParts[1];
+
+        return null;
     }
 
     public static String ConvertNewLine(String s){
